--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,8 +1,6 @@
 @import "fontsPreload";
-@import "fonts";
-@import "iconsfont";
 @import "vars";
-@import "px2em";
+@import "px2";
 @import "adaptiveValue";
 @import "reset";
 @import "icons";
