--- a/scss/header.scss
+++ b/scss/header.scss
@@ -52,9 +52,11 @@ html.dark .header {
 	width: 100%;
 	height: 100%;
 	&-link {
-		display: table;
-		&.icon-logo {
-			font-size: rem(75px);
+		svg {
+			transition: all 0.3s ease 0s;
+			path {
+				fill: var(--main-color);
+			}
 		}
 	}
 	&__dark {
@@ -75,6 +77,7 @@ html.dark .header {
 		display: flex;
 		align-items: center;
 		position: relative;
+		transition: all 0.5s ease 0s;
 	}
 
 	&__list {
