--- a/scss/index.scss
+++ b/scss/index.scss
@@ -4,6 +4,7 @@
 //Hero
 
 .hero {
+	padding: 0;
 	@include adaptiv-value("margin-bottom", 76, 250, 1);
 	background: url(../img/hero-bg.jpg) 50% 50% / cover no-repeat;
 	&__container {
@@ -27,9 +28,13 @@ html.dark .hero {
 }
 .offer {
 	&__title {
-		transition: color 0.1s ease 0s;
+		transition: all 1s ease 0s;
 		@include adaptiv-value("max-width", 520, 300, 0);
 		@include adaptiv-value("margin-bottom", 40, 20, 0);
+		&._not-active {
+			transform: translateY(100%);
+			opacity: 0;
+		}
 	}
 
 	&__text {
@@ -37,6 +42,11 @@ html.dark .hero {
 		font-weight: 700;
 		line-height: 1.5em;
 		@include adaptiv-value("margin-bottom", 16, 20, 0);
+		transition: all 1s ease 0.2s;
+		&._not-active {
+			transform: translateY(100%);
+			opacity: 0;
+		}
 	}
 
 	&__form {
@@ -45,6 +55,11 @@ html.dark .hero {
 		border-radius: $defautBorderRadius;
 		overflow: hidden;
 		background: var(--base-color);
+		transition: all 1s ease 0.4s;
+		&._not-active {
+			transform: translateY(100%);
+			opacity: 0;
+		}
 	}
 
 	&__input {
@@ -96,12 +111,6 @@ html.dark .features {
 	justify-content: center;
 	flex: 1 1 rem(356px);
 	&__img {
-		max-width: 100%;
-		img {
-			object-fit: cover;
-			height: rem(45px);
-			width: rem(58px);
-		}
 	}
 
 	&__content {
@@ -188,8 +197,9 @@ html.dark .features {
 		margin-bottom: rem(18px);
 		z-index: 1;
 		transition: all 1.5s ease 0.3s;
-		&._active {
-			width: 250%;
+		width: 250%;
+		&._not-active {
+			width: 0;
 		}
 		&__column {
 			@extend .stats-pointer;
@@ -199,9 +209,7 @@ html.dark .features {
 			height: 2px;
 			bottom: 130px;
 			position: absolute;
-			&._active {
-				width: 100%;
-			}
+			width: 100%;
 		}
 	}
 
@@ -266,8 +274,13 @@ html.dark .features {
 			transition: all cubic-bezier(0.3, 0, 0.15, 1) 2s;
 			background-color: var(--accent-color);
 			width: rem(78px);
-			transform: scale(0.6, 1);
-			height: 0;
+			transform: scale(1);
+		}
+		&._not-active {
+			> div {
+				transform: scale(0.6, 1);
+				height: 0;
+			}
 		}
 	}
 	&__desc {
@@ -276,21 +289,15 @@ html.dark .features {
 }
 .deductible {
 	&__value {
-		&._active {
-			> div {
-				transform: scale(1);
-				height: rem(150px);
-			}
+		> div {
+			height: rem(150px);
 		}
 	}
 }
 .annual-max {
 	&__value {
-		&._active {
-			> div {
-				transform: scale(1);
-				height: rem(300px);
-			}
+		> div {
+			height: rem(300px);
 		}
 	}
 }
@@ -354,19 +361,15 @@ html.dark .brings-bg__2 {
 		span {
 			color: var(--main-color);
 			position: relative;
-			&::before {
+			&::after {
+				content: url("data:image/svg+xml;charset=UTF-8,<svg xmlns='http://www.w3.org/2000/svg' version='1.1' width='25' height='19' viewBox='0 0 25 19'><path d='M0.414429 10.5033H20.901L14.1242 17.1923L15.6099 18.6588L23.3249 11.0178H23.351L24.8106 9.57711L23.351 8.11066H23.3249L15.6099 0.469727L14.1242 1.93617L20.7446 8.44512H0.414429V10.5033Z' fill='%23214e41'/></svg>");
 				transition: all 0.3s ease 0s;
-				position: absolute;
-				top: 50%;
-				transform: translate(0, -50%);
-				right: rem(-65px);
-				@include adaptiv-value("right", -65, -22.5, 1);
-				@include adaptiv-value("font-size", 24, 18, 1);
+				@include adaptiv-value("margin-left", 40, 12.5, 1);
+				margin-left: rem(40px);
 			}
 			&:hover {
-				&::before {
-					@include adaptiv-value("right", -75, -27.5, 1);
-					@include adaptiv-value("font-size", 24, 20, 1);
+				&::after {
+					@include adaptiv-value("margin-left", 50, 22, 1);
 				}
 			}
 		}
@@ -386,6 +389,9 @@ html.dark .brings-bg__2 {
 	}
 }
 
+html.dark .brings-text__1 span::after {
+	content: url("data:image/svg+xml;charset=UTF-8,<svg xmlns='http://www.w3.org/2000/svg' version='1.1' width='25' height='19' viewBox='0 0 25 19'><path d='M0.414429 10.5033H20.901L14.1242 17.1923L15.6099 18.6588L23.3249 11.0178H23.351L24.8106 9.57711L23.351 8.11066H23.3249L15.6099 0.469727L14.1242 1.93617L20.7446 8.44512H0.414429V10.5033Z' fill='%237cdfc3'/></svg>");
+}
 //* Plan section
 .plan {
 	&__container {
@@ -469,9 +475,10 @@ html.dark .brings-bg__2 {
 
 	&__img {
 		flex: 1;
+		display: flex;
+		justify-content: center;
 		img {
-			border-radius: 41px 41px 0 0;
-			width: 100%;
+			border-radius: 42px 42px 0 0;
 			height: rem(500px);
 			object-position: center bottom;
 			object-fit: contain;
@@ -564,6 +571,10 @@ html.dark .employers {
 	&__slide {
 		display: flex;
 		justify-content: center;
+		svg,
+		svg path {
+			fill: var(--main-color);
+		}
 	}
 
 	&__img {
@@ -572,9 +583,10 @@ html.dark .employers {
 	&__button-prev,
 	&__button-next {
 		z-index: 0;
-		&::before {
-			font-size: rem(25px);
-			color: var(--icon-color);
+		svg {
+			path {
+				fill: var(--main-color);
+			}
 		}
 		&::after {
 			content: none;
