--- a/scss/px2.scss
+++ b/scss/px2.scss
@@ -2,14 +2,14 @@
 
 $unrounded: 10000;
 
-@function rem($px, $round: 100) {
+@function rem($px, $round: 100, $font-size: $base-font-size) {
 	@if unitless($px) {
 		@warn "Assuming #{$px} to be in pixels, attempting to convert it into pixels.";
-		@return rem($px * 1px, "rem", $base-font-size);
+		@return rem($px * 1px, "rem", $font-size);
 	} @else if unit($px) == rem {
 		@return $px;
 	}
-	$test: #{math.div((math.round(math.div($px, $base-font-size) * $round)), $round) * 1rem};
+	$test: #{math.div((math.round(math.div($px, $font-size) * $round)), $round) * 1rem};
 	@return $test;
 }
 
@@ -22,11 +22,4 @@ $unrounded: 10000;
 	}
 	$test: #{math.div((math.round(math.div($px, $font-size) * $round)), $round) * 1em};
 	@return $test;
-}
-
-@function get-vw($px-vw, $base-vw: 1440, $round: 10) {
-	@return #{math.div(math.round(math.div(($px-vw * 100), $base-vw) * $round), $round) * 1vw};
-}
-@function vw($base-unit, $min-unit, $min-unit-in-px: $min-unit * 1px) {
-	@return calc(rem($min-unit-in-px, 10) + get-vw($base-unit - $min-unit));
 }
